fixing horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@ html {
 }
 body {
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
